Brush cycling with shortcuts broken #56250

Closed
opened 2018-08-06 12:34:52 +02:00 by Julien Kaspar · 15 comments
Member

Blender Version
Broken: 2.8 d890ad37a82

Short description of error
When cycling through brushes in the same category using shortcuts - for example the smooth, scrape & flatten brushes in Sculpt Mode with "S" - it only uses the second or third brush and locks it. Cycling through them is only working if you do it manually by clicking the icons in the toolbar.

**Blender Version** Broken: 2.8 d890ad37a82 **Short description of error** When cycling through brushes in the same category using shortcuts - for example the smooth, scrape & flatten brushes in Sculpt Mode with "S" - it only uses the second or third brush and locks it. Cycling through them is only working if you do it manually by clicking the icons in the toolbar.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @kostex

Added subscriber: @kostex

I think it's the same issue I have in sculpt mode.. I've tracked it down to commit d79df6c0
the changes to space_toolsystem_common.py got result in not being able to cycle through brush presets.
Commenting them out fixes that (for the time being)
Did not investigate source further. Maybe committer Campbell knows more ;-)

I think it's the same issue I have in sculpt mode.. I've tracked it down to commit d79df6c0 the changes to space_toolsystem_common.py got result in not being able to cycle through brush presets. Commenting them out fixes that (for the time being) Did not investigate source further. Maybe committer Campbell knows more ;-)

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2018-08-08 09:52:08 +02:00

@ideasman42 that’s probably for you?

@ideasman42 that’s probably for you?
Author
Member

This bug actually bothers me a lot during my workday. Not being able to rely on the shortcuts and having to click through the popups in the toolbar slows me down quite a bit.
Would be great if someone fixes this one soon.

This bug actually bothers me a lot during my workday. Not being able to rely on the shortcuts and having to click through the popups in the toolbar slows me down quite a bit. Would be great if someone fixes this one soon.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

@JulienKaspar It is brothering everybody sculpting in Blender 2.8 and it exposes the downside of the new system, it makes me wondering again why are we hiding some other brushes, when we have a lot space where we can have them all exposed? It would easier to just click on the brush and select it, in stead of click and drag. Please @ideasman42 the new tool system need more love in sculpt mode to make it more user friendly.

@JulienKaspar It is brothering everybody sculpting in Blender 2.8 and it exposes the downside of the new system, it makes me wondering again why are we hiding some other brushes, when we have a lot space where we can have them all exposed? It would easier to just click on the brush and select it, in stead of click and drag. Please @ideasman42 the new tool system need more love in sculpt mode to make it more user friendly.
Author
Member

@ErickNyanduKabongo That is a different issue though. This task is just the bug report that the shortcut cycling doesn't work anymore.

@ErickNyanduKabongo That is a different issue though. This task is just the bug report that the shortcut cycling doesn't work anymore.

In #56250#528867, @JulienKaspar wrote:
@ErickNyanduKabongo That is a different issue though. This task is just the bug report that the shortcut cycling doesn't work anymore.

Yes i know that what i mean is if every brushes were plainly exposed in the UI, some of us will be happy with minimal key shortcut or no shortcut at all.
I don't know if you encounter this problem, sometimes working with grab brush, switch to another brush, work for awhile and go back to grab brush, without any visual warning you will get the thumb brush and this happened to me so many times, some other time with crease brush and pinch/magnify

> In #56250#528867, @JulienKaspar wrote: > @ErickNyanduKabongo That is a different issue though. This task is just the bug report that the shortcut cycling doesn't work anymore. Yes i know that what i mean is if every brushes were plainly exposed in the UI, some of us will be happy with minimal key shortcut or no shortcut at all. I don't know if you encounter this problem, sometimes working with grab brush, switch to another brush, work for awhile and go back to grab brush, without any visual warning you will get the thumb brush and this happened to me so many times, some other time with crease brush and pinch/magnify
Author
Member

@ErickNyanduKabongo Yes. Yes I am encountering this problem because it is due to this bug. But it makes no sense to unpack a discussion between a couple of people about changing the design decisions of the toolbar within a simple bug report. There are separate tasks for this to comment in :D

@ErickNyanduKabongo Yes. Yes I am encountering this problem because it is due to this bug. But it makes no sense to unpack a discussion between a couple of people about changing the design decisions of the toolbar within a simple bug report. There are separate tasks for this to comment in :D
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

@brecht @ideasman42 Are there any plans on fixing this bug any time soon?
I heard at some point that there is more work being put into how the tools for the brushes work and maybe also on how you cycle between them? Is that why this task is on a lesser priority?

This bug has been slowing me down for quite a bit now but especially for the Blender Conference it would be a blessing if this issue could be fixed, even if just temporarily.

@brecht @ideasman42 Are there any plans on fixing this bug any time soon? I heard at some point that there is more work being put into how the tools for the brushes work and maybe also on how you cycle between them? Is that why this task is on a lesser priority? This bug has been slowing me down for quite a bit now but especially for the Blender Conference it would be a blessing if this issue could be fixed, even if just temporarily.

This issue was referenced by blender/blender@569dfe5784

This issue was referenced by blender/blender@569dfe5784aab59079589ef780d7826a9983b699

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#56250
No description provided.